--- a/package.json
+++ b/package.json
@@ -26,14 +26,22 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@sveltejs/package": "^2.0.0",
+		"@types/prismjs": "^1.26.0",
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.21",
 		"publint": "^0.1.9",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"prism-svelte": "^0.5.0",
+		"prismjs": "^1.29.0"
+	}
 }
